--- a/package.json
+++ b/package.json
@@ -19,5 +19,7 @@
     "react-dom": "18.2.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/node": "^18.11.18"
+  }
 }
