--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@heroicons/react": "^1.0.6",
     "@next/font": "13.1.1",
     "autoprefixer": "^9.8.8",
+    "dotenv": "^16.0.3",
+    "mongoose": "^6.8.3",
     "next": "13.1.1",
     "next-themes": "^0.2.1",
     "postcss": "^7.0.39",
