--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next/font": "13.1.1",
     "autoprefixer": "^9.8.8",
     "dotenv": "^16.0.3",
+    "mongodb": "^4.13.0",
     "mongoose": "^6.8.3",
     "next": "13.1.1",
     "next-themes": "^0.2.1",
