--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^1.0.6",
     "@next/font": "13.1.1",
     "autoprefixer": "^9.8.8",
+    "babel-preset-es2015": "^6.24.1",
     "dotenv": "^16.0.3",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.3",
