--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "postcss": "^7.0.39",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.18"
