--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^9.8.8",
     "babel-preset-es2015": "^6.24.1",
     "dotenv": "^16.0.3",
+    "gray-matter": "^4.0.3",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.3",
     "next": "13.1.1",
@@ -21,6 +22,8 @@
     "postcss": "^7.0.39",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "typewriter-effect": "^2.19.0"
   },
