--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-preset-es2015": "^6.24.1",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
+    "glob": "^8.1.0",
     "gray-matter": "^4.0.3",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.3",
