Changes #10 	modified:   components/Articles.js 	new file:   lib/blog.js 	deleted:    lib/posts.js 	modified:   package-lock.json modified:   package.json 	modified:   pages/index.js 	modified:   pages/posts/[slug].js 	modified:   posts/docker-magic.md

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.3",
     "glob": "^8.1.0",
     "gray-matter": "^4.0.3",
+    "markdown-it": "^13.0.1",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.3",
     "next": "13.1.1",
@@ -24,6 +25,7 @@
     "postcss": "^7.0.39",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "reading-time": "^1.5.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
