--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
     "@next/font": "13.1.1",
     "autoprefixer": "^9.8.8",
     "babel-preset-es2015": "^6.24.1",
+    "comma-number": "^2.1.0",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
+    "fetcher": "^0.3.0",
     "glob": "^8.1.0",
     "gray-matter": "^4.0.3",
     "markdown-it": "^13.0.1",
+    "mdx": "^0.3.1",
+    "mdx-prism": "^0.3.4",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.3",
     "next": "13.1.1",
+    "next-mdx-remote": "^4.3.0",
     "next-themes": "^0.2.1",
     "postcss": "^7.0.39",
     "react": "18.2.0",
@@ -28,6 +33,7 @@
     "reading-time": "^1.5.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
+    "swr": "^2.0.3",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "typewriter-effect": "^2.19.0"
   },
