--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "reading-time": "^1.5.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
+    "swiper": "^9.0.5",
     "swr": "^2.0.3",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "typewriter-effect": "^2.19.0"
