--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
-    "@next/font": "13.1.1",
+    "@next/font": "^13.1.1",
     "@next/mdx": "^13.1.6",
     "autoprefixer": "^9.8.8",
     "babel-preset-es2015": "^6.24.1",
