--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "postcss": "^7.0.39",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-social-icons": "^5.15.0",
     "reading-time": "^1.5.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
