--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
     "@next/font": "^13.1.1",
-    "@next/mdx": "^13.1.6",
+    "@next/mdx": "^13.2.1",
     "autoprefixer": "^9.8.8",
     "babel-preset-es2015": "^6.24.1",
     "classnames": "^2.3.2",
