--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
+    "@types/marked": "^4.0.8",
     "@types/node": "^18.11.18",
     "webpack": "^5.75.0"
   }
